Refactored. Added the threshold through the db KpiThresholdFilterModel/KpiThresholdFilter(ad mutable model) threshold is set up before the rules are fired.